Fixed Footer Covering Content & Building Posts

--- a/views/style.css
+++ b/views/style.css
@@ -8,6 +8,7 @@ body {
     background: #2b2c2d;
     color: #ffffff;
     height:100%;
+    margin-bottom: 100px;
     font-family: "Helvetica Neue Ultralight", Helvetica;
 }
 
